P4ADEV-2267 add getVoucherToken API
